--- a/package.json
+++ b/package.json
@@ -36,42 +36,44 @@
   },
   "private": true,
   "resolutions": {
-    "@solana/web3.js": "1.47.3"
+    "@solana/web3.js": "1.54.0"
   },
   "dependencies": {
-    "@chakra-ui/icons": "^2.0.2",
-    "@chakra-ui/react": "^2.2.1",
-    "@chakra-ui/theme": "^2.1.0",
-    "@chakra-ui/theme-tools": "^2.0.2",
-    "@choc-ui/chakra-autocomplete": "^4.22.0",
+    "@chakra-ui/icons": "^2.0.9",
+    "@chakra-ui/react": "^2.3.2",
+    "@chakra-ui/styled-system": "^2.3.1",
+    "@chakra-ui/system": "^2.2.9",
+    "@chakra-ui/theme": "^2.1.11",
+    "@chakra-ui/theme-tools": "^2.0.11",
+    "@choc-ui/chakra-autocomplete": "^5.1.1",
     "@choc-ui/paginator": "^3.4.0",
-    "@emotion/react": "11.9.3",
-    "@emotion/styled": "11.9.3",
-    "@heroicons/react": "^1.0.6",
-    "@kin-tools/kin-memo": "^1.5.0",
-    "@kin-tools/kin-transaction": "^1.5.0",
-    "@nestjs/apollo": "^10.0.13",
-    "@nestjs/axios": "^0.0.8",
-    "@nestjs/common": "^8.4.5",
-    "@nestjs/config": "^2.0.1",
-    "@nestjs/core": "^8.4.5",
-    "@nestjs/graphql": "^10.0.13",
-    "@nestjs/jwt": "^8.0.1",
-    "@nestjs/passport": "^8.2.1",
-    "@nestjs/platform-express": "^8.4.5",
-    "@nestjs/schedule": "^2.0.1",
-    "@nestjs/serve-static": "^2.2.2",
-    "@nestjs/swagger": "^5.2.1",
-    "@opentelemetry/api": "^1.1.0",
-    "@opentelemetry/core": "^1.0.1",
-    "@opentelemetry/exporter-prometheus": "^0.27.0",
-    "@opentelemetry/sdk-node": "^0.27.0",
-    "@prisma/client": "^3.14.0",
-    "@scure/bip39": "^1.0.0",
+    "@emotion/react": "11.10.4",
+    "@emotion/styled": "11.10.4",
+    "@heroicons/react": "^2.0.10",
+    "@kin-tools/kin-memo": "^1.8.1",
+    "@kin-tools/kin-transaction": "^1.8.1",
+    "@nestjs/apollo": "^10.1.0",
+    "@nestjs/axios": "^0.1.0",
+    "@nestjs/common": "9.0.11",
+    "@nestjs/config": "^2.2.0",
+    "@nestjs/core": "9.0.11",
+    "@nestjs/graphql": "^10.1.1",
+    "@nestjs/jwt": "^9.0.0",
+    "@nestjs/passport": "^9.0.0",
+    "@nestjs/platform-express": "9.0.11",
+    "@nestjs/schedule": "^2.1.0",
+    "@nestjs/serve-static": "^3.0.0",
+    "@nestjs/swagger": "6.1.2",
+    "@opentelemetry/api": "^1.2.0",
+    "@opentelemetry/core": "^1.6.0",
+    "@opentelemetry/exporter-prometheus": "^0.32.0",
+    "@opentelemetry/sdk-node": "^0.32.0",
+    "@prisma/client": "^4.3.1",
+    "@scure/bip39": "^1.1.0",
     "@solana/buffer-layout": "^4.0.0",
-    "@solana/spl-token": "^0.2.0",
-    "@solana/web3.js": "^1.47.3",
-    "apollo-server-express": "^3.8.1",
+    "@solana/spl-token": "^0.3.4",
+    "@solana/web3.js": "1.54.0",
+    "apollo-server-express": "^3.10.2",
     "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
     "bignumber": "^1.1.0",
@@ -79,7 +81,7 @@
     "class-validator": "^0.13.2",
     "color": "^4.2.3",
     "cookie-parser": "^1.4.6",
-    "core-js": "^3.22.7",
+    "core-js": "^3.25.1",
     "create-hmac": "^1.1.7",
     "dexie": "^3.2.2",
     "dexie-react-hooks": "^1.1.1",
@@ -87,15 +89,15 @@
     "final-form": "^4.20.7",
     "framer-motion": "^6.3.10",
     "fs-extra": "^10.1.0",
-    "graphql": "^16.5.0",
-    "graphql-scalars": "^1.17.0",
+    "graphql": "^16.6.0",
+    "graphql-scalars": "^1.18.0",
     "graphql-tag": "^2.12.6",
     "graphql-type-json": "^0.3.2",
     "joi": "^17.6.0",
     "json-bigint-patch": "^0.0.8",
     "lodash": "^4.17.21",
-    "nestjs-otel": "^3.0.4",
-    "opentelemetry-node-metrics": "^1.1.0",
+    "nestjs-otel": "^4.0.1",
+    "opentelemetry-node-metrics": "^2.0.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
@@ -107,91 +109,91 @@
     "reflect-metadata": "^0.1.13",
     "regenerator-runtime": "^0.13.9",
     "request-ip": "^3.3.0",
-    "rxjs": "^7.5.5",
+    "rxjs": "^7.5.6",
     "slugify": "^1.6.5",
-    "swagger-ui-express": "^4.4.0",
+    "swagger-ui-express": "^4.5.0",
     "text-encoding": "^0.7.0",
-    "ts-md5": "^1.2.11",
+    "ts-md5": "^1.3.1",
     "tslib": "^2.4.0",
-    "urql": "^2.2.0",
+    "urql": "^3.0.3",
     "yup": "^0.32.11"
   },
   "devDependencies": {
-    "@babel/core": "^7.18.2",
-    "@babel/preset-env": "7.18.2",
+    "@babel/core": "^7.19.0",
+    "@babel/preset-env": "7.19.0",
     "@cypress/code-coverage": "^3.10.0",
-    "@graphql-codegen/add": "^3.1.1",
-    "@graphql-codegen/cli": "^2.6.2",
-    "@graphql-codegen/fragment-matcher": "^3.2.1",
-    "@graphql-codegen/introspection": "^2.1.1",
-    "@graphql-codegen/typescript": "^2.4.11",
-    "@graphql-codegen/typescript-document-nodes": "^2.2.11",
-    "@graphql-codegen/typescript-operations": "^2.4.0",
-    "@graphql-codegen/typescript-urql": "^3.5.10",
-    "@nestjs/schematics": "^8.0.11",
-    "@nestjs/testing": "^8.4.5",
-    "@nrwl/cli": "14.4.3",
-    "@nrwl/cypress": "14.4.3",
-    "@nrwl/devkit": "14.4.3",
-    "@nrwl/eslint-plugin-nx": "14.4.3",
-    "@nrwl/jest": "14.4.3",
-    "@nrwl/js": "14.4.3",
-    "@nrwl/linter": "14.4.3",
-    "@nrwl/nest": "14.4.3",
-    "@nrwl/node": "14.4.3",
-    "@nrwl/nx-cloud": "14.2.0",
-    "@nrwl/nx-plugin": "14.4.3",
-    "@nrwl/react": "14.4.3",
-    "@nrwl/web": "14.4.3",
-    "@nrwl/workspace": "14.4.3",
-    "@openapitools/openapi-generator-cli": "^2.5.1",
-    "@opentelemetry/api-metrics": "^0.27.0",
-    "@swc-node/register": "^1.4.2",
-    "@swc/core": "^1.2.194",
-    "@swc/helpers": "^0.3.16",
-    "@testing-library/react": "13.3.0",
-    "@testing-library/react-hooks": "8.0.0",
+    "@graphql-codegen/add": "^3.2.1",
+    "@graphql-codegen/cli": "^2.12.0",
+    "@graphql-codegen/fragment-matcher": "^3.3.1",
+    "@graphql-codegen/introspection": "^2.2.1",
+    "@graphql-codegen/typescript": "^2.7.3",
+    "@graphql-codegen/typescript-document-nodes": "^2.3.3",
+    "@graphql-codegen/typescript-operations": "^2.5.3",
+    "@graphql-codegen/typescript-urql": "^3.7.0",
+    "@nestjs/schematics": "9.0.3",
+    "@nestjs/testing": "9.0.11",
+    "@nrwl/cli": "14.6.5",
+    "@nrwl/cypress": "14.6.5",
+    "@nrwl/devkit": "14.6.5",
+    "@nrwl/eslint-plugin-nx": "14.6.5",
+    "@nrwl/jest": "14.6.5",
+    "@nrwl/js": "14.6.5",
+    "@nrwl/linter": "14.6.5",
+    "@nrwl/nest": "14.6.5",
+    "@nrwl/node": "14.6.5",
+    "@nrwl/nx-cloud": "14.6.2",
+    "@nrwl/nx-plugin": "14.6.5",
+    "@nrwl/react": "14.6.5",
+    "@nrwl/web": "14.6.5",
+    "@nrwl/workspace": "14.6.5",
+    "@openapitools/openapi-generator-cli": "^2.5.2",
+    "@opentelemetry/api-metrics": "^0.32.0",
+    "@swc-node/register": "^1.5.1",
+    "@swc/core": "^1.2.249",
+    "@swc/helpers": "^0.4.11",
+    "@testing-library/react": "13.4.0",
     "@types/bcrypt": "^5.0.0",
     "@types/bs58": "^4.0.1",
     "@types/color": "^3.0.3",
     "@types/create-hmac": "^1.1.0",
     "@types/cron": "^2.0.0",
-    "@types/jest": "27.4.1",
-    "@types/node": "18.0.0",
-    "@types/react": "18.0.14",
-    "@types/react-dom": "18.0.5",
+    "@types/jest": "28.1.8",
+    "@types/node": "18.7.16",
+    "@types/react": "18.0.18",
+    "@types/react-dom": "18.0.6",
     "@types/request-ip": "^0.0.37",
     "@types/supertest": "^2.0.12",
     "@types/text-encoding": "^0.0.36",
     "@types/yup": "^0.29.14",
-    "@typescript-eslint/eslint-plugin": "5.24.0",
-    "@typescript-eslint/parser": "5.24.0",
-    "babel-jest": "27.5.1",
+    "@typescript-eslint/eslint-plugin": "5.36.2",
+    "@typescript-eslint/parser": "5.36.2",
+    "babel-jest": "28.1.3",
     "babel-loader": "8.2.5",
     "cypress": "^9.7.0",
-    "eslint": "8.15.0",
+    "eslint": "8.22.0",
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-import": "2.26.0",
-    "eslint-plugin-jsx-a11y": "6.6.0",
-    "eslint-plugin-react": "7.30.1",
+    "eslint-plugin-jsx-a11y": "6.6.1",
+    "eslint-plugin-react": "7.31.7",
     "eslint-plugin-react-hooks": "4.6.0",
-    "fake-indexeddb": "^3.1.7",
+    "fake-indexeddb": "^4.0.0",
     "husky": "^8.0.1",
-    "jest": "27.5.1",
-    "lint-staged": "^12.4.3",
-    "nodemon": "^2.0.16",
-    "nx": "14.4.3",
+    "jest": "28.1.3",
+    "jest-environment-jsdom": "^29.0.2",
+    "lint-staged": "^13.0.3",
+    "nodemon": "^2.0.19",
+    "nx": "14.6.5",
     "prettier": "2.7.1",
-    "prisma": "^3.14.0",
+    "prisma": "^4.3.1",
     "react-test-renderer": "18.2.0",
     "stream-browserify": "^3.0.0",
-    "supertest": "6.2.3",
-    "ts-jest": "27.1.4",
-    "ts-morph": "^15.0.0",
-    "ts-node": "10.8.1",
+    "supertest": "6.2.4",
+    "ts-jest": "28.0.8",
+    "ts-morph": "^16.0.0",
+    "ts-node": "10.9.1",
     "typescript": "4.7.4",
-    "webpack": "5.72.1"
+    "webpack": "5.74.0"
   },
   "lint-staged": {
     "*.{js,json,css,scss,md,ts,html,graphql}": [
