--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,10 @@
+# The URL of the Admin UI, used to redirect to the Admin UI after login.
+ADMIN_URL=http://localhost:4400
 # The URL of the API server
 API_URL=http://localhost:3000/api
+# Enable or disable authentication with username and password.
+# This is recommended to be disabled in production and use an external provider.
+AUTH_PASSWORD_ENABLED=true
 # Provision users with a coma-separated list.
 # Each item has the form: <username>|<password>|<role?>:<email?>:<avatarUrl?>
 # The password is optional, when left blank the user can only login with an external provider.
@@ -7,9 +12,10 @@ API_URL=http://localhost:3000/api
 # The email is optional and can be used to link an account to external providers.
 # The avatarUrl is optional and can be used to provison an avatar for the user
 AUTH_USERS="alice|Kinetic@alice1|Admin|alice@email.com|http://avatars.dicebear.com/api/open-peeps/aliceal.svg,bob||User|bob@gmail.com"
-# Provision more apps by providing the byte array of the fee payer and name
+# Provision more apps by providing the byte array of the fee payer, name and optionally a logo URL.
 APP_1_FEE_PAYER_BYTE_ARRAY=[24,20,238,188,26,234,120,209,88,63,170,46,66,98,21,113,194,120,143,228,231,37,91,0,242,32,180,99,243,179,57,144,11,233,235,235,203,20,105,33,47,140,152,253,12,148,72,175,141,253,242,110,225,110,21,211,118,87,111,206,208,166,190,78]
 APP_1_NAME="App 1"
+#APP_1_LOGO_URL=""
 COOKIE_DOMAINS="localhost,local.kinetic.host,pages.dev"
 #COOKIE_NAME="__session"
 CORS_ORIGINS=http://localhost:4200
@@ -17,6 +23,13 @@ CORS_ORIGINS=http://localhost:4200
 #METRICS_ENDPOINT_ENABLED=true
 #METRICS_PORT=9001
 DATABASE_URL="postgresql://prisma:prisma@localhost:5432/prisma?schema=kinetic"
+# Get a GitHub oAuth client ID and secret from
+# https://github.com/settings/developers or  https://github.com/organizations/<your-org>/settings/applications
+# set the callback URL to <your API_URL>/auth/github/callback
+# then set them here and enable it.
+#GITHUB_CLIENT_ID=x
+#GITHUB_CLIENT_SECRET=x
+#GITHUB_ENABLED=false
 JWT_SECRET="KineticJwtSecret!"
 HOST=127.0.0.1
 PORT=3000
