--- a/.github/workflows/test-api-e2e.yml
+++ b/.github/workflows/test-api-e2e.yml
@@ -8,10 +8,12 @@ on:
       - main
 
 env:
-  AUTH_USERS: 'alice|Kinetic@alice1|Admin,bob|Kinetic@bob1'
+  ADMIN_URL: 'http://localhost:3000'
   API_URL: 'http://localhost:3000'
   APP_1_FEE_PAYER_BYTE_ARRAY: '[24,20,238,188,26,234,120,209,88,63,170,46,66,98,21,113,194,120,143,228,231,37,91,0,242,32,180,99,243,179,57,144,11,233,235,235,203,20,105,33,47,140,152,253,12,148,72,175,141,253,242,110,225,110,21,211,118,87,111,206,208,166,190,78]'
   APP_1_NAME: 'App 1'
+  AUTH_USERS: 'alice|Kinetic@alice1|Admin,bob|Kinetic@bob1'
+  AUTH_PASSWORD_ENABLED: true
   COOKIE_DOMAINS: 'localhost'
   COOKIE_NAME: '__session'
   DATABASE_URL: 'postgresql://prisma:prisma@localhost:5432/prisma?schema=kinetic'
