--- a/package.json
+++ b/package.json
@@ -96,13 +96,13 @@
     "graphql": "^16.6.0",
     "graphql-scalars": "^1.18.0",
     "graphql-tag": "^2.12.6",
-    "graphql-type-json": "^0.3.2",
     "joi": "^17.6.0",
     "json-bigint-patch": "^0.0.8",
     "lodash": "^4.17.21",
     "nestjs-otel": "^4.0.1",
     "opentelemetry-node-metrics": "^2.0.0",
     "passport": "^0.6.0",
+    "passport-github": "^1.1.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "react": "18.2.0",
@@ -164,6 +164,8 @@
     "@types/cron": "^2.0.0",
     "@types/jest": "28.1.8",
     "@types/node": "18.7.18",
+    "@types/node-fetch": "^2.6.2",
+    "@types/passport-github": "^1.1.7",
     "@types/react": "18.0.20",
     "@types/react-dom": "18.0.6",
     "@types/request-ip": "^0.0.37",
