--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,12 @@
-ADMIN_USERNAME="alice"
-ADMIN_PASSWORD="Kinetic@admin1"
+# The URL of the API server
 API_URL=http://localhost:3000/api
+# Provision users with a coma-separated list.
+# Each item has the form: <username>|<password>|<role?>:<email?>:<avatarUrl?>
+# The password is optional, when left blank the user can only login with an external provider.
+# The role is optional and can be one of: Admin and User (default).
+# The email is optional and can be used to link an account to external providers.
+# The avatarUrl is optional and can be used to provison an avatar for the user
+AUTH_USERS="alice|Kinetic@alice1|Admin|alice@email.com|http://avatars.dicebear.com/api/open-peeps/aliceal.svg,bob||User|bob@gmail.com"
 # Provision more apps by providing the byte array of the fee payer and name
 APP_1_FEE_PAYER_BYTE_ARRAY=[24,20,238,188,26,234,120,209,88,63,170,46,66,98,21,113,194,120,143,228,231,37,91,0,242,32,180,99,243,179,57,144,11,233,235,235,203,20,105,33,47,140,152,253,12,148,72,175,141,253,242,110,225,110,21,211,118,87,111,206,208,166,190,78]
 APP_1_NAME="App 1"
