--- a/package.json
+++ b/package.json
@@ -118,10 +118,10 @@
     "rxjs": "^7.5.6",
     "slugify": "^1.6.5",
     "swagger-ui-express": "^4.5.0",
-    "text-encoding": "^0.7.0",
     "ts-md5": "^1.3.1",
     "tslib": "^2.4.0",
     "urql": "^3.0.3",
+    "util": "^0.12.4",
     "yup": "^0.32.11"
   },
   "devDependencies": {
