--- a/libs/web/util/sdk/src/codegen.yml
+++ b/libs/web/util/sdk/src/codegen.yml
@@ -3,6 +3,14 @@ schema: 'http://localhost:3000/graphql'
 documents:
   - 'libs/web/util/sdk/src/graphql/**/*.graphql'
 generates:
+  apps/api-e2e/src/generated/api-sdk.ts:
+    plugins:
+      - add:
+          content: '/* eslint-disable */'
+      - typescript
+      - typescript-document-nodes
+      - typescript-operations
+      - fragment-matcher
   libs/web/util/sdk/src/generated/graphql.tsx:
     plugins:
       - add:
